--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 
 .DS_Store
 
+#extent result files
+*.html
+*.png
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -15,6 +19,7 @@
 *.jar
 *.war
 *.ear
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
