--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,1 @@
-*.class
-.settings
-.project
-.classpath
-/target
-
-*.log
-
-.DS_Store
-
-#extent result files
-*.html
-*.png
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+/target/
